frontend/test/should_fail/array_removeIf_exec_input_graph_element.grg
rule array_removeIf_exec(ref a:array<Node>) {
	n:Node;
	modify {
		---
		exec({ aa:array<Edge> = a.removeIf{value:Edge -> nameof(value) != "$0"} });
	}
}
